--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,7 +58,7 @@ sidebar:
 
     {%- assign result = hidden | where_exp: "item", "item == 'comments'" -%}
     {%- if result.size == 0 -%}
-    <div class="post-comments"> /** 아래 부분을 주석처리해야 댓글기능이 사용가능함(disqus) */
+    <div class="post-comments"> <!--** 아래 부분을 주석처리해야 댓글기능이 사용가능함(disqus) -->
     <!--  {%- if page.comments != false -%}
 
       {%- if site.disqus.shortname -%}
@@ -70,7 +70,7 @@ sidebar:
       {%- endif -%}
 
       {%- endif -%} -->
-      {%- include extensions/comments/disqus.html -%} /** 요내용을 추가해야 댓글기능이 작동함 */
+      {%- include extensions/comments/disqus.html -%} <!-- 요내용을 추가해야 댓글기능이 작동함 -->
     </div>
     {%- endif -%}
 
