--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -17,7 +17,7 @@ html {
 
       &.site-header {
         .site-brand-inner, .page-link {
-          color: #fff;
+          color: #bfb3b3;
           transition: 0.1s color;
         }
 
