--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -22,8 +22,8 @@ $white-color: #fdfdfd !default;
 $table-text-align: left !default;
 
 $header-height: $base-line-height * $base-font-size * 2.85 !default;
-$header-text-color: invert(#A18484) !default;
-$header-background-color: #A18484 !default;
+$header-text-color: invert($theme-color) !default;
+$header-background-color: $theme-color !default;
 
 $footer-height: $header-height * 1.05 !default;
 $footer-text-color: lighten(invert($theme-color), 25%) !default;
