--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -23,7 +23,7 @@ $table-text-align: left !default;
 
 $header-height: $base-line-height * $base-font-size * 2.85 !default;
 $header-text-color: invert($theme-color) !default;
-$header-background-color: $theme-color !default;
+$header-background-color: #EBE4E7 !default;
 
 $footer-height: $header-height * 1.05 !default;
 $footer-text-color: lighten(invert($theme-color), 25%) !default;
