--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -17,7 +17,7 @@ html {
 
       &.site-header {
         .site-brand-inner, .page-link {
-          color: #ff;  /* 여기 색깔을 변경하면 헤더부분의 글자색깔이 바뀜 */
+          color: #A39EA8;  /* 여기 색깔을 변경하면 헤더부분의 글자색깔이 바뀜 */
           transition: 0.1s color;
         }
 
