--- a/_includes/extensions/comments/disqus.html
+++ b/_includes/extensions/comments/disqus.html
@@ -10,7 +10,7 @@
       var d = document, s = d.createElement('script');
 
     /**  s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js'; */
-      s.src = 'https://techhrmaker.disqus.com/embed.js';
+      s.src = 'https://ubion.disqus.com/embed.js';
       s.setAttribute('data-timestamp', +new Date());
       (d.head || d.body).appendChild(s);
     })();
