--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -44,6 +44,9 @@
             {%- include functions.html func='get_value' -%}
             {%- assign translate_langs = return -%}
             {%- if translate_langs.size > 0 -%}
+              {%- assign name = 'lang' -%}
+              {%- include functions.html func='get_value' default='en' -%}
+              {%- assign lang = return -%}
               <span class="page-link">
                   {%- include extensions/google-translate.html -%}
               </span>
