--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
   {%- include extensions/google-analytics.html -%}
   {%- endif -%}
   {%- include extensions/code-highlight.html -%}
+  {%- include custom-head.html -%}
 </head>
