--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -97,8 +97,7 @@ html {
 
   .site-brand-inner {
     @include relative-font-size(1.125);
-    font-weight: $base-font-weight;
-    letter-spacing: -1px;
+    font-weight: 800;
     transition: 0.1s filter color;
 
     &, &:visited {
