--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -97,6 +97,9 @@ html[data-theme="dark"]  {
       & > *:first-child {
         opacity: 0.718;
       }
+      @include media-query($on-palm) {
+        background-position: 97% center;
+      }
     }
   }
 
