--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -583,6 +583,7 @@ html {
     & > *:first-child {
       @include center-image;
       transition: 0.1s all ease-in-out;
+      opacity: 0.718;
       @include media-query($on-palm) {
            background-position: 97% center;
       }
