--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -37,6 +37,9 @@
               {%- assign my_page = site.pages | where: "path", path | first -%}
               {%- if my_page.title -%}
               <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | upcase | escape }}</a>
+              {%- else -%}
+              <a class="page-link" href="{{ path }}">{{ path }}</a>
+            
               {%- endif -%}
             {%- endfor -%}
 
