--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -12,10 +12,8 @@
             | replace: '(cleft)', '<span class="copyleft">&copy;</span>'
         -%}
       <div>{{ copyright }}</div>
-      <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
-      generator." href="http://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
-      another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
-      <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></div>
+      <div>Powered by <a title="Jekyll is a simple, blog-aware, static site generator." href="http://jekyllrb.com/">Jekyll</a> &amp; <a title="github pages" href="https://pages.github.com/">Github Pages</a>.&amp; <a title="Yat, yet another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
+      <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a> | Follow me on <a href="www.linkedin.com/in/johannes-hölzel">Linkedin</a></div>
     </div>
   </div>
 </footer>
