--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -37,11 +37,9 @@
               {%- assign my_page = site.pages | where: "path", path | first -%}
               {%- if my_page.title -%}
               <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | upcase | escape }}</a>
-              {%- else -%}
-              <a class="page-link" href="{{ path }}">{{ path }}</a>
-            
-              {%- endif -%}
             {%- endfor -%}
+             <a href="www.linkedin.com/in/johannes-hölzel">My LinkedIn</a>
+             <a href="github.com/jhoelzel">My GitHub</a>
 
             {%- assign name = 'translate_langs' -%}
             {%- include functions.html func='get_value' -%}
