--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -37,6 +37,7 @@
               {%- assign my_page = site.pages | where: "path", path | first -%}
               {%- if my_page.title -%}
               <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | upcase | escape }}</a>
+              {%- endif -%}
             {%- endfor -%}
              <a href="www.linkedin.com/in/johannes-hölzel">My LinkedIn</a>
              <a href="github.com/jhoelzel">My GitHub</a>
