--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -39,8 +39,8 @@
               <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | upcase | escape }}</a>
               {%- endif -%}
             {%- endfor -%}
-             <a class="page-link" href="https://www.linkedin.com/in/johannes-hölzel">My LinkedIn</a>
-             <a class="page-link" href="https://github.com/jhoelzel">My GitHub</a>
+             <a class="page-link" href="https://www.linkedin.com/in/johannes-hölzel"><img src="https://img.shields.io/badge/linkedin%20-%230077B5.svg?&amp;style=for-the-badge&amp;logo=linkedin&amp;logoColor=white" alt="Linkedin"></a>
+             <a class="page-link" href="https://github.com/jhoelzel"><img src="https://img.shields.io/badge/github-%23121011.svg?style=for-the-badge&amp;logo=github&amp;logoColor=white" alt="GitHub"></a>
 
             {%- assign name = 'translate_langs' -%}
             {%- include functions.html func='get_value' -%}
