--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,6 @@
 <figure class="image">
-	<img src="{{ include.url }}" alt="{{ include.description }}" style="{{ include.style }}">
+	<img src="{{ include.url }}" alt="{{ include.description }}">
+	{%- if include.description -%}
 	<figcaption>{{ include.description }}</figcaption>
+	{%- endif -%}
 </figure>
