--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -63,7 +63,5 @@ $on-laptop:        875px !default;
   "yat/dark",
   "misc/theme-toggle",
   "misc/article-menu",
-  "misc/common-list",
-  "misc/google-translate",
-  "misc/gitment"
+  "misc/common-list"
 ;
