Fix formatting of research.md

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -557,6 +557,10 @@ html {
           ol {
             list-style: brackets;
           }
+
+          p {
+            margin-bottom: $spacing-unit * 0.25;
+          }
         }
       }
     }
