Improve footer and sidebar formatting

--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -20,7 +20,7 @@
           {%- endfor -%}
         </span>
       </div>
-      <div class="powered-by">Powered by
+      <div>Powered by
         <a title="Jekyll is a simple, blog-aware, static site generator." href="https://jekyllrb.com/">Jekyll</a>,
         <a title="Yat, yet
             another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a> &amp;
