Fix broken links

--- a/_includes/sidebar/category-list.html
+++ b/_includes/sidebar/category-list.html
@@ -5,5 +5,5 @@
 
 {% assign keys = categories %}
 {% assign field = 'categories' %}
-{% assign url = '/categories.html' | relative_url %}
+{% assign url = '/publications/topics.html' | relative_url %}
 {% include sidebar/common-list.html %}
