--- a/_includes/views/pagination.html
+++ b/_includes/views/pagination.html
@@ -35,7 +35,7 @@
       </a> -->
       <div class="post-tags">
         {%- for tag in post.tags -%}
-        <a class="post-tag" href="{{ '/tags.html ' | relative_url }}#{{tag}}">#{{tag}}</a>
+        <a class="post-tag" href="{{ '/publications/tags.html ' | relative_url }}#{{tag}}">#{{tag}}</a>
         {%- endfor -%}
       </div>
     </li>
