--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -2,20 +2,20 @@
 
 // Define defaults for each variable.
 
-$base-font-family: Apple SD Gothic Neo, Nanum Gothic, Malgun Gothic, sans-serif, !default;
+$base-font-family: Apple SD Gothic Neo, Nanum Gothic, Malgun Gothic, sans-serif !default;
 $base-font-size: 16px !default;
 $base-font-weight: 400 !default;
 $base-line-height: 1.6 !default;
-$small-font-size:  $base-font-size * 0.875 !default;
+$small-font-size: $base-font-size * 0.875 !default;
 
-$spacing-unit:     30px !default;
+$spacing-unit: 30px !default;
 
-$text-color:       #454545 !default;
+$text-color: #454545 !default;
 $background-color: #fff !default;
 
-$grey-color:       #828282 !default;
+$grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
-$grey-color-dark:  darken($grey-color, 25%) !default;
+$grey-color-dark: darken($grey-color, 25%) !default;
 
 $white-color: #fdfdfd !default;
 
@@ -31,13 +31,13 @@ $footer-background-color: darken($theme-color, 5%) !default;
 
 $banner-height: 640px !default;
 $banner-text-color: lighten($white-color, 0%) !default;
-$banner-background: rgba(0,0,0,0.8) !default;
+$banner-background: rgba(0, 0, 0, 0.8) !default;
 
 // Width of the content area
 // $content-width:    920px !default;
 
-$on-palm:          600px !default;
-$on-laptop:        875px !default;
+$on-palm: 600px !default;
+$on-laptop: 875px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
@@ -57,11 +57,5 @@ $on-laptop:        875px !default;
 }
 
 // Import partials.
-@import
-  "yat/base",
-  "yat/layout",
-  "yat/dark",
-  "misc/theme-toggle",
-  "misc/article-menu",
-  "misc/common-list"
-;
+@import "yat/base", "yat/layout", "yat/dark", "misc/theme-toggle",
+  "misc/article-menu", "misc/common-list";
