Reduce paddings on mobile devices

--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -237,6 +237,11 @@ pre {
   padding-right: $spacing-unit;
   padding-left: $spacing-unit;
   @extend %clearfix;
+
+  @include media-query($on-palm) {
+    padding-right: $spacing-unit * 0.5;
+    padding-left: $spacing-unit * 0.5;
+  }
 }
 
 /**
