Add dnsever banner

--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -23,8 +23,10 @@
       <div>Powered by
         <a title="Jekyll is a simple, blog-aware, static site generator." href="https://jekyllrb.com/">Jekyll</a>,
         <a title="Yat, yet
-            another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a> &amp;
-        <a href="https://fontawsome.com">Font Awesome</a>.
+            another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>,
+        <a href="https://fontawsome.com">Font Awesome</a> &amp; <a class="dnsever" href="http://www.dnsever.com"
+          target="dnsever"><img src="http://banner.dnsever.com/dnsever-banner_80x16.gif" border="0"
+            alt="DNS server, DNS service"></a>.
       </div>
     </div>
   </div>
