--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -99,7 +99,7 @@
             }
           })();
         </script>
-      {%- else if banner_image -%}
+      {%- elsif banner_image -%}
         <div style="background-image: url({{ banner_image }})"></div>
         <img class="img-placeholder" src="{{ banner_image }}">
       {%- endif -%}
